--- a/src/components/layout/mobileNav.css
+++ b/src/components/layout/mobileNav.css
@@ -16,6 +16,7 @@
     color: var(--color-primary);
     text-align: center;
     line-height: 1;
+    font-family: var(--font-family-display);
   }
   
   .mobileNav {
