--- a/src/components/layout/topNav.css
+++ b/src/components/layout/topNav.css
@@ -26,7 +26,7 @@
     line-height: 1;
     margin-bottom: var(--spacing-2);
     padding-bottom: var(--spacing-1);
-    border-bottom: 1px solid rgba(165, 165, 165, 0.3);
+    border-bottom: 1px solid var(--color-divider);
     width: 100%;
     text-align: center;
 }
