--- a/src/components/layout/mobileNav.css
+++ b/src/components/layout/mobileNav.css
@@ -4,6 +4,7 @@
     display: none;
     background-color: transparent;
     padding: var(--spacing-header);
+    padding-left: var(--spacing-4);
     position: fixed;
     top: 0;
     left: 0;
@@ -14,7 +15,7 @@
   .mobileLogo {
     font-size: var(--font-size-lg);
     color: var(--color-primary);
-    text-align: center;
+    text-align: left;
     line-height: 1;
     font-family: var(--font-family-display);
   }
