style: 모바일 네비게이션 헤더 스타일 수정
- 모바일 네비게이션 헤더의 스타일을 수정했습니다.
- 텍스트 정렬을 왼쪽으로 변경하고, 왼쪽 여백을 추가했습니다.

--- a/src/components/layout/mobileNav.css
+++ b/src/components/layout/mobileNav.css
@@ -51,9 +51,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    text-align: left;
     width: var(--width-nav-item);
     line-height: var(--line-height-none);
+    padding-left: var(--spacing-4);
   }
   
   .mobileNav a:hover {
