--- a/src/components/layout/topNav.css
+++ b/src/components/layout/topNav.css
@@ -37,6 +37,12 @@
     border: none;
     width: auto;
     font-size: var(--font-size-lg);
+    justify-content: flex-start;
+}
+
+.navContent.scrolled .logoImage {
+    width: 32px;
+    height: 32px;
 }
 
 .navContent.scrolled .menu {
@@ -61,6 +67,16 @@
     border-bottom: 1px solid var(--color-divider);
     width: 100%;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: var(--spacing-3);
+}
+
+.logoImage {
+    width: 56px;
+    height: 56px;
+    object-fit: contain;
 }
 
 .menu {
