--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-color: var(--color-background);
+    min-height: calc(100vh - 120px - var(--height-mobile-nav));
 }
 
 .loginForm {
@@ -14,6 +13,7 @@
     box-shadow: var(--shadow-modal);
     width: 100%;
     max-width: 400px;
+    margin: var(--spacing-4);
 }
 
 .loginInput {
