style(home): 스트리밍 페이지 이미지 섹션 레이아웃 수정

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -9,6 +9,7 @@
   .imagesection {
     margin-bottom: var(--spacing-10);
     position: relative;
+    flex-direction: column;
   }
   
   .imagesectionTitle {
