--- a/src/components/MovieList/movieList.css
+++ b/src/components/MovieList/movieList.css
@@ -1,4 +1,4 @@
-.movieList {
+.streamingMovieList {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: var(--spacing-8);
@@ -6,7 +6,7 @@
     margin-bottom: var(--spacing-4);
 }
 
-.movieItem {
+.streamingMovieItem {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -15,7 +15,7 @@
     cursor: pointer;
 }
 
-.moviePosterContainer {
+.streamingMoviePosterContainer {
     position: relative;
     width: 100%;
     padding-top: 150%;
@@ -24,7 +24,7 @@
     margin-bottom: var(--spacing-2);
 }
 
-.moviePoster {
+.streamingMoviePoster {
     position: absolute;
     top: 0;
     left: 0;
@@ -34,11 +34,11 @@
     transition: transform 0.3s ease;
 }
 
-.movieItem:hover .moviePoster {
+.streamingMovieItem:hover .streamingMoviePoster {
     transform: scale(1.05);
 }
 
-.movieTitle {
+.streamingMovieTitle {
     display: block;
     font-size: var(--font-size-lg);
     color: var(--color-text-primary);
@@ -53,26 +53,26 @@
 }
 
 @media (max-width: 768px) {
-    .movieList {
+    .streamingMovieList {
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
         gap: var(--spacing-5);
     }
     
-    .movieTitle {
+    .streamingMovieTitle {
         font-size: var(--font-size-base);
     }
 
-    .moviePosterContainer {
+    .streamingMoviePosterContainer {
         margin-bottom: 5px;
     }
 }
 
 @media (min-width: 1200px) {
-    .movieList {
+    .streamingMovieList {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     }
     
-    .movieTitle {
+    .streamingMovieTitle {
         font-size: var(--font-size-2xl);
     }
 } 
