--- a/src/components/MovieList/movieList.css
+++ b/src/components/MovieList/movieList.css
@@ -1,7 +1,7 @@
 .streamingMovieList {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: var(--spacing-8);
+    grid-template-columns: repeat(6, 1fr);
+    gap: var(--spacing-4);
     justify-content: center;
     margin-bottom: var(--spacing-4);
 }
@@ -52,12 +52,31 @@
     text-overflow: ellipsis;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1400px){
     .streamingMovieList {
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-        gap: var(--spacing-5);
+        grid-template-columns: repeat(5, 1fr);
     }
-    
+}
+
+@media (max-width: 1200px) {
+    .streamingMovieList {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 900px) {
+    .streamingMovieList {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    .streamingMovieList {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 768px) {
     .streamingMovieTitle {
         font-size: var(--font-size-base);
     }
@@ -68,10 +87,6 @@
 }
 
 @media (min-width: 1200px) {
-    .streamingMovieList {
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    }
-    
     .streamingMovieTitle {
         font-size: var(--font-size-2xl);
     }
