--- a/src/components/MovieList/movieList.css
+++ b/src/components/MovieList/movieList.css
@@ -1,7 +1,8 @@
 .streamingMovieList {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    gap: var(--spacing-4);
+    gap: var(--spacing-8);
+    padding: var(--spacing-6);
     justify-content: center;
     margin-bottom: var(--spacing-4);
 }
@@ -55,24 +56,29 @@
 @media (max-width: 1400px){
     .streamingMovieList {
         grid-template-columns: repeat(5, 1fr);
+        gap: var(--spacing-6);
     }
 }
 
 @media (max-width: 1200px) {
     .streamingMovieList {
         grid-template-columns: repeat(4, 1fr);
+        gap: var(--spacing-5);
     }
 }
 
 @media (max-width: 900px) {
     .streamingMovieList {
         grid-template-columns: repeat(3, 1fr);
+        gap: var(--spacing-4);
     }
 }
 
 @media (max-width: 600px) {
     .streamingMovieList {
         grid-template-columns: repeat(2, 1fr);
+        gap: var(--spacing-3);
+        padding: var(--spacing-4);
     }
 }
 
