--- a/src/pages/Streaming/streaming.css
+++ b/src/pages/Streaming/streaming.css
@@ -71,6 +71,17 @@
     font-size: var(--font-size-base);
     font-family: var(--font-family-korean);
     outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12' fill='white'%3E%3Cpath d='M2 4l4 4 4-4'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right var(--spacing-3) center;
+    padding-right: var(--spacing-8);
+}
+
+.mobileSelect::-ms-expand {
+    display: none;
 }
 
 .contentWrapper {
