--- a/src/pages/Profile/Edit/edit.css
+++ b/src/pages/Profile/Edit/edit.css
@@ -2,7 +2,6 @@
     padding: var(--spacing-6);
     padding-top: var(--spacing-8);
     max-width: var(--breakpoint-tablet);
-    margin: 0 auto;
     padding-left: var(--spacing-8);
 }
 
@@ -57,8 +56,10 @@
 }
 
 .formInput:disabled {
+    background-color: var(--color-background);
     opacity: 0.7;
     cursor: not-allowed;
+    border-color: var(--color-divider);
 }
 
 .formActions {
@@ -106,4 +107,24 @@
 
 .changeImageButton:hover {
     background-color: var(--color-hover);
+}
+
+.formLabelHint {
+    color: var(--color-text-secondary);
+    font-size: var(--font-size-sm);
+    margin-left: var(--spacing-2);
+}
+
+.formInputDisabled {
+    background-color: var(--color-background);
+    opacity: 0.7;
+    cursor: not-allowed;
+    border-color: var(--color-divider);
+}
+
+.formHint {
+    color: var(--color-text-secondary);
+    font-size: var(--font-size-sm);
+    margin-top: var(--spacing-1);
+    font-family: var(--font-family-base);
 } 
